# ambiente

./: embaralha.py  pyproject.toml
