[tool.poetry]
name = "ambiente"
version = "0.1.0"
description = "um jogo de baralho"
authors = ["Dimitri"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
